rustdocs/errors/rust-bitcoin-consensus_encoding-tests-encode.rs.txt
error[E0432]: unresolved import `bitcoin_consensus_encoding`
 --> ../rust-bitcoin/consensus_encoding/tests/encode.rs:8:5
  |
8 | use bitcoin_consensus_encoding::{
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `bitcoin_consensus_encoding`
  |
help: you might be missing a crate named `bitcoin_consensus_encoding`, add it to your project and import it in your code
  |
5 + extern crate bitcoin_consensus_encoding;
  |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
